Fix issue with scrollbars on big screens.

--- a/style.scss
+++ b/style.scss
@@ -369,7 +369,7 @@ body ::-webkit-scrollbar-thumb {
 	.site-content .alignfull {
 		margin-left: auto;
 		margin-right: auto;
-
+		width: 100%;
 	}
 }
 
